--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,11 +21,16 @@ default = ["libudev"]
 libudev = ["mio-serial/libudev"]
 
 [dependencies]
-tokio = { version = "0.2.0", features = ["io-driver"], default-features = false }
-mio-serial = { version = "3.3.0", default-features = false }
+tokio = { version = "0.2", features = ["io-driver"], default-features = false }
+mio-serial = { version = "3.3", default-features = false }
 
 [dev-dependencies]
-futures = "0.3.1"
-tokio = { version = "0.2.0", features = ["macros"], default-features = false }
-tokio-util = { version = "0.2.0", features = ["codec"], default-features = false }
+futures = "0.3"
+tokio = { version = "0.2", features = ["macros"], default-features = false }
+tokio-util = { version = "0.3", features = ["codec"], default-features = false }
 bytes = "0.5"
+
+
+[[example]]
+name = "serialRecvSend"
+path = "examples/serial_println.rs"
